--- a/wishes/pages/business/businessHome/index.wxml
+++ b/wishes/pages/business/businessHome/index.wxml
@@ -3,7 +3,7 @@
         <view class="business-header-deal">
             <view>
                 <text>买入合计:</text>
-                <text>{{businessTotal.exchangeMoneyTotal}}元</text>
+                <text>{{businessTotal.buyMoneyTotal}}元</text>
             </view>
             <view>
                 <text>卖出合计:</text>
@@ -11,8 +11,8 @@
             </view>
         </view>
         <view class="business-header-total">
-            <text>对换合计:</text>
-            <text>{{businessTotal.buyMoneyTotal}}元</text>
+            <text>兑换合计:</text>
+            <text>{{businessTotal.exchangeMoneyTotal}}元</text>
         </view>
     </view>
     <view class="business-main">
